# literbike

./: .gitignore  BACKLOG.md  BETANET_EXTRACTION_REPORT.md  CCEK_DENSIFICATION_STATUS.md  COMMERCIAL-LICENSE.md  COMMERCIAL.md  COPYING  COUCHDB_EMULATOR.md  CURL_H2_INTEGRATION.md  Cargo-full.toml  Cargo-minimal.toml  Cargo-original.toml  Cargo-test.toml  Cargo.toml  Cargo.toml.bak  DEPLOY.md  FEATURE_CATALOG.md  GIT_TASK_TREES.md  HYBRID_ARCHITECTURE.md  INTERNMENT.md  KNOX_SUBSUMPTION_HIERARCHY.md  KOTLIN_RIVER_MAPPING.md  LICENSE  LiterbikeControlPlane.dmg  Makefile  P2P_SUBSUMPTION_SPEC.md  PRODUCTION_STATUS.md  PROTOCOL_MOCKING_RESULTS.md  QUIC_CHROME_FINAL.md  QUIC_JOURNAL.md  QUIC_QA_STATUS.md  QUIC_QA_TODO.md  QUIC_TEST_STATUS.md  QUIC_TLS_H2_H3.md  README.md  ROOT_CAUSE_FOUND.md  RUST_ASYNC_ECOSYSTEM.md  SEARCH_FINDINGS.md  SECURITY.md  STRUCTURED_CONCURRENCY.md  (+44 more)
.cargo/: config.toml
.claude/agents/: firewall-pentester.md  kotlin-meta-densifier.md  langchain-dataflow-curator.md  libc-rust-converter.md  libc-rust-termux-converter.md  network-security-specialist.md  network-tunnel-knox-solver.md  persistence-architect-encyclopedia.md  pragmatist.md  (+6 more)
.github/: copilot-instructions.md
.kilo/: kilo.json
CCEK/: KOTLIN_EXACT.md
certs/: server.crt  server.key
completion/: litebike-completion.bash
conductor/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT_20260309.md  IMPLEMENTATION_REPORT_20260317.md  IMPLEMENTATION_SESSION_REPORT_20260309.md  IMPLEMENTATION_SUMMARY_20260309.md  STATUS.md  SUMMARY.md  TRACKS_SUMMARY.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor-cli/: Cargo.toml  README.md
conductor-cli/src/: main.rs
configs/: agent-host-free-lanes.dsel  litebike-htx-tunnel.service
docs/: CARRIERS.md  CARRIER_BYPASS_IMPLEMENTATION.md  HTTP_SERVER.md  NETWORK_DOMAINS.md  PROXY_ICON_LIVE_DSEL_MENU.md  QUIC_RFC_COMMENT_DOCS.md  termux-knox-integration.md
examples/: http_server.rs  iface_demo.rs
literbike-ffi/: Cargo.toml
literbike-ffi/include/: literbike_json.h
literbike-ffi/src/: json.rs  lib.rs
literbike-py/: Cargo.toml  pyproject.toml
literbike-py/src/: lib.rs
literbike-quic-capi/: Cargo.toml
literbike-quic-capi/src/: lib.rs
s/: ci-test.sh  proxy-bridge
scripts/: README.md  bridge.sh  client-host-sync.sh  connect_termux.sh  deploy_remote.sh  gap_analysis.py  knox-bridge  litebike_ctl.sh  litebike_sync.example.conf  litebike_sync.sh  proxy-bridge  quick_proxy.sh  start-litebike.sh  summary.sh  tdd_definitions.md  termux_knox_client.sh
src/: abstractions.rs  advanced_fuzzer.rs  advanced_protocols.rs  auto_discovery.rs  auto_peering_bridge.rs  betanet_patterns.rs  bonjour.rs  bonjour_discovery.rs  cas_backends.rs  cas_gateway.rs  cas_storage.rs  cli_core.rs  cli_dsl.rs  config.rs  detection_orchestrator.rs  dht.rs  doh.rs  egress_backoff.rs  egress_connector.rs  env_facade_parity.rs  extended_protocols.rs  fuzzer.rs  git_sync.rs  host_trust.rs  io_substrate.rs  kafka_replacement_smoke.rs  knox_proxy.rs  lib.rs  libc_base64.rs  libc_listener.rs  libc_logger.rs  libc_random.rs  libc_socket_tune.rs  main-simple.rs  main-termux.rs  main.rs  massive_fuzzer.rs  model_mux.rs  model_serving_taxonomy.rs  note20_features.rs  (+44 more)
src/ccek/agent8888/: Cargo.toml  mod.rs
src/ccek/agent8888/handler/: mod.rs
src/ccek/agent8888/io/: mod.rs
src/ccek/agent8888/listener/: mod.rs
src/ccek/agent8888/protocol/: mod.rs
src/ccek/agent8888/src/: lib.rs  listener.rs
src/ccek/agent8888/src/element_stubs/: mod.rs
src/ccek/agent8888/src/element_stubs/handler/: mod.rs
src/ccek/agent8888/src/element_stubs/io/: mod.rs
src/ccek/agent8888/src/element_stubs/matcher/: mod.rs
src/ccek/agent8888/src/element_stubs/protocol/: mod.rs
src/ccek/agent8888/src/element_stubs/reactor/: mod.rs
src/ccek/agent8888/src/element_stubs/timer/: mod.rs
src/ccek/agent8888/src/request_factory/: mod.rs  tracker.rs
src/ccek/htxke/: Cargo.toml  mod.rs
src/ccek/json/: Cargo.toml  mod.rs  parser.rs  value.rs
src/ccek/json/src/: bitmap.rs  error.rs  index.rs  lib.rs  pool.rs
src/ccek/keymux/: Cargo.toml
src/ccek/keymux/protocols/: mod.rs  models.rs
src/ccek/keymux/src/: cards.rs  decision.rs  dsel.rs  facade.rs  lib.rs  main.rs  menu.rs  mod.rs  token_ledger.rs  types.rs
src/ccek/keymux/src/protocols/: transform.rs
src/ccek/quic/: Cargo.toml
src/ccek/quic/connection/: mod.rs
src/ccek/quic/crypto/: mod.rs
src/ccek/quic/src/: bedrock.rs  compat.rs  congruence.rs  lib.rs  quic_ccek.rs  quic_crypto.rs  quic_engine.rs  quic_engine_hybrid.rs  quic_request_factory.rs  quic_server.rs  quic_session_cache.rs  quic_stream.rs  quic_wam.rs  tls_ccek.rs  wam.rs
src/ccek/quic/src/tls/: mod.rs
src/ccek/quic/src/tls_crypto/: mod.rs  packet_protection.rs  provider.rs
src/ccek/quic/stream/: mod.rs
src/ccek/quic/stubs_backup/: mod.rs
src/ccek/sctp/: Cargo.toml  chunk.rs  handler.rs  mod.rs  socket.rs
src/ccek/sctp/association/: mod.rs
src/ccek/sctp/chunk/: mod.rs
src/ccek/sctp/chunk_element/: mod.rs
src/ccek/sctp/stream/: mod.rs
src/ccek/store/: Cargo.toml
src/ccek/store/src/: lib.rs
src/ccek/store/src/backends/: memory.rs  mod.rs
src/ccek/store/src/cas/: backends.rs  gateway.rs  mod.rs  storage.rs
src/ccek/store/src/couchdb/: api.rs  cursor.rs  git_sync.rs  ipfs.rs  mod.rs  tensor.rs  views.rs
src/http-htx/: Cargo.toml  mod.rs
src/http-htx/handler/: mod.rs
src/http-htx/listener/: mod.rs
src/http-htx/matcher/: mod.rs
src/http-htx/protocol/: mod.rs
src/http-htx/reactor/: mod.rs
src/http-htx/timer/: mod.rs
termux-package/: README-termux.md  build-on-termux.sh  install.sh
tests/: README.md  apply_env_side_effects.rs  integration_quic_dht_cas.rs  knox_socks5.rs  mod.rs  port_8888_scenario_test.rs  port_hopping.rs  socks5_integration_test.rs  socks5_mocks.rs  socks5_tests.rs
tmp/: netstat
tools/: build_macos_control_plane_app.sh  check_rfc_trace.sh
tools/selfhosted/: Cargo.toml  Makefile  README.md  init_couchdb.sh
tools/selfhosted/src/: config.rs  couchdb_emulator.rs  densifier.rs  main.rs
(+563 files in other folders)
