[package]
name = "literbike"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/literbike/literbike"

[features]
default = ["quic"]
quic = ["dep:bincode", "dep:bytes", "dep:rand", "dep:parking_lot", "dep:socket2", "dep:tracing", "dep:log", "dep:glob", "dep:base64"]
quic-crypto = ["quic"]
full = ["quic", "couchdb", "gates"]
couchdb = ["dep:sled", "dep:utoipa", "dep:utoipa-swagger-ui", "dep:axum", "dep:tower", "dep:tower-http", "dep:base64", "dep:ndarray"]
gates = ["dep:async-trait", "dep:parking_lot"]
ipfs = ["dep:ipfs-api-backend-hyper", "dep:cid"]
tensor = ["dep:ndarray", "dep:ndarray-linalg"]

[dependencies]
# Core (always needed)
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
once_cell = "1.19"

# Async/concurrency
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
async-channel = "2.5"
sha2 = "0.10"
num-bigint = "0.4"
data-encoding = "2.4"
dashmap = "6.1"

# Time/UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# System
nix = { version = "0.27", features = ["socket"] }
libc = "0.2"
cfg-if = "1.0"

# Utils
smallvec = "1.15"
percent-encoding = "2.3"
regex = "1.0"

# QUIC feature dependencies
bincode = { version = "1.3", optional = true }
bytes = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
parking_lot = { version = "0.12", optional = true }
socket2 = { version = "0.5", features = ["all"], optional = true }
tracing = { version = "0.1", optional = true }

# CouchDB feature dependencies
sled = { version = "0.34", optional = true }
utoipa = { version = "4.0", optional = true }
utoipa-swagger-ui = { version = "4.0", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
base64 = { version = "0.22", optional = true }

# Gates feature dependencies
async-trait = { version = "0.1", optional = true }

# IPFS feature dependencies
ipfs-api-backend-hyper = { version = "0.6", optional = true }
cid = { version = "0.10", optional = true }

# Tensor feature dependencies
ndarray = { version = "0.15", optional = true }
ndarray-linalg = { version = "0.16", optional = true }

# Optional networking
warp = { version = "0.3", optional = true }
hyper = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
git2 = { version = "0.19", optional = true }
notify = { version = "6.1", optional = true }
mime = { version = "0.3", optional = true }
glob = { version = "0.3", optional = true }

[workspace]
members = [
    "literbike-py",
    "literbike-ffi",
	"literbike-quic-capi",
	"tools/selfhosted",
	"tools/config_tester",
]

# Binary targets with required features
[[bin]]
name = "couchdb_emulator"
required-features = ["couchdb"]

[[bin]]
name = "litebike"
required-features = ["warp", "git2"]
rand = "0.8"  # For betanet_patterns
