[package]
name = "literbike"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/literbike/literbike"

[features]
default = ["quic", "userspace-nio", "userspace-kernel", "userspace-network", "htx"]
quic = ["dep:bincode", "dep:tracing", "dep:log", "dep:glob", "dep:base64"]
quic-crypto = ["quic"]
full = ["quic", "couchdb", "gates"]
couchdb = ["dep:sled", "dep:utoipa", "dep:utoipa-swagger-ui", "dep:axum", "dep:tower", "dep:tower-http", "dep:base64", "dep:ndarray", "dep:ndarray-linalg", "dep:ipfs-api-backend-hyper", "dep:cid", "dep:notify", "dep:git2"]
gates = ["dep:async-trait"]
request-factory = ["couchdb", "dep:axum", "dep:tower", "dep:tower-http"]
ipfs = ["dep:ipfs-api-backend-hyper", "dep:cid"]
tensor = ["dep:ndarray", "dep:ndarray-linalg"]
curl-h2 = ["dep:curl", "dep:h2", "dep:http", "dep:clap"]
tls-quic = ["dep:clap", "quic", "dep:openssl", "dep:rustls", "dep:rcgen", "dep:rustls-pemfile"]
sctp = []
git2 = ["dep:git2"]
pijul-session = ["dep:libpijul"]
ring = ["dep:ring"]
json = ["dep:ahash", "dep:simd-json", "dep:pest", "dep:pest_derive"]
json-min = ["dep:ahash"]

# HTX protocol (X25519 + HKDF)
htx = ["x25519-dalek"]

# Userspace kernel emulation (inlined, FFI via libc)
userspace-nio = ["libc"]
userspace-kernel = ["libc"]
userspace-network = ["libc"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
once_cell = "1.19"
byteorder = "1.5"

futures = "0.3"
async-stream = "0.3"
async-channel = "2.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"
num-bigint = "0.4"
data-encoding = "2.4"
dashmap = "6.1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

nix = { version = "0.27", features = ["socket"] }
libc = { version = "0.2", optional = true }
cfg-if = "1.0"

smallvec = "1.15"
percent-encoding = "2.3"
regex = "1.0"
hex = "0.4"
bs58 = "0.5"
multibase = "0.9"
hmac = "0.12"

tempfile = "3.0"

bincode = { version = "1.3", optional = true }
bytes = "1.0"
rand = "0.8"
parking_lot = "0.12"
socket2 = { version = "0.5", features = ["all"] }
tracing = { version = "0.1", optional = true }

sled = { version = "0.34", optional = true }
utoipa = { version = "4.0", optional = true }
utoipa-swagger-ui = { version = "4.0", optional = true, features = ["axum"] }
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["cors", "trace"], optional = true }
base64 = { version = "0.22", optional = true }

async-trait = { version = "0.1", optional = true }

ipfs-api-backend-hyper = { version = "0.6", optional = true }
cid = { version = "0.10", optional = true }

ndarray = { version = "0.15", optional = true }
ndarray-linalg = { version = "0.16", optional = true }

warp = { version = "0.3", optional = true }
hyper = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
git2 = { version = "0.19", optional = true }
notify = { version = "6.1", optional = true }
mime = { version = "0.3", optional = true }
glob = { version = "0.3", optional = true }

curl = { version = "0.4", optional = true, features = ["http2"] }
h2 = { version = "0.4", optional = true }
http = { version = "1.0", optional = true }
clap = { version = "4.0", optional = true, features = ["derive"] }

openssl = { version = "0.10", optional = true, features = ["v110"] }
ring = { version = "0.17.14", optional = true }
rustls = { version = "0.23", optional = true, features = ["ring"] }
rcgen = { version = "0.13", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

ahash = { version = "0.8", optional = true }
simd-json = { version = "0.13", optional = true }
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

dirs = "5.0"
blake3 = "1.5"

# HTX crypto deps
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2.0", features = ["static_secrets"], optional = true }
subtle = "2.5"

# Kernel FFI deps
bytemuck = "1.0"
memmap2 = "0.9"
zeroize = "1.0"

libpijul = { path = "../pijul/libpijul", optional = true }

[workspace]
resolver = "2"
members = [
    "literbike-py",
    "literbike-ffi",
    "literbike-quic-capi",
    "tools/selfhosted",
    "tools/config_tester",
    "conductor-cli",
    "src/ccek/core",
    "src/ccek/agent8888",
    "src/ccek/quic",
    "src/ccek/sctp",
    "src/ccek/htxke",
    "src/http-htx",
]
