[package]
name = "conductor-cli"
version = "0.1.0"
edition = "2021"
description = "Development track management CLI for Literbike conductor"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
indicatif = "0.17"
walkdir = "2.4"
regex = "1.0"
git2 = "0.19"
env_logger = "0.10"
