[package]
name = "literbike-ffi"
version = "0.1.0"
edition = "2021"
description = "Standalone Python FFI for Literbike QUIC transport"
license = "AGPL-3.0"

[lib]
name = "literbike_ffi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hostname = "0.3"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.27", features = ["socket"] }
