[package]
name = "literbike-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Literbike QUIC transport layer"
license = "AGPL-3.0"

[lib]
name = "literbike_py"
crate-type = ["cdylib"]

[features]
default = ["quic"]
quic = ["literbike/quic"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
literbike = { path = "..", features = ["quic"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hostname = "0.3"
