[package]
name = "literbike-selfhosted"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
notify = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
tiny_http = "0.11"
chrono = { version = "0.4", features = ["serde"] }
memmap2 = "0.5"
walkdir = "2"
tar = "0.4"
flate2 = { version = "1.0", features = ["zlib"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
