[package]
name = "ccek-htxke"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[features]
default = ["htx-core"]

# Core HTX protocol
htx-core = []

# Ticket verification
verify = ["htx-core"]

[dependencies]
ccek-core = { path = "../core" }

hkdf = "0.12"
sha2 = "0.10"
subtle = "2.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
rand = "0.8"
