[package]
name = "ccek-json"
version = "0.1.0"
edition = "2021"
description = "CCEK JSON - TrikeShed port, pure Rust, no serde"
license = "MIT OR Apache-2.0"

[lib]
name = "ccek_json"
path = "mod.rs"

[features]
default = ["bitmap"]
bitmap = []
full = ["bitmap"]

[dependencies]
ccek-core = { path = "../core" }

[dev-dependencies]
