[package]
name = "ccek-keymux"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
