[package]
name = "ccek-keymux"
version = "0.1.0"
edition = "2021"
authors = ["Literbike Team"]
description = "CCEK Model/Key Mux DSEL - Provider routing and quota management"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
regex = "1.0"


[dev-dependencies]
tempfile = "3.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mux-menu"
path = "src/main.rs"
