[package]
name = "ccek-quic"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["quic-core"]

# Core QUIC protocol
quic-core = []

# Crypto feature for the crypto provider
quic-crypto = ["quic-core"]

# TLS termination (requires openssl, rustls, rcgen)
tls-quic = ["quic-core", "dep:openssl", "dep:rustls", "dep:rcgen", "dep:rustls-pemfile", "dep:async-channel"]

# WAM tensor engine
tensor = ["quic-core"]

# Integration with full literbike crate (enables wam, bedrock, congruence, engine, quic_engine_full)
literbike-full = ["quic-core"]

# Full QUIC stack
full = ["quic-core", "quic-crypto", "tls-quic", "tensor", "literbike-full"]

[dependencies]
ccek-core = { path = "../core" }

# Core deps used by most modules
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1.0", features = ["net", "rt", "macros", "time", "io-util", "signal"] }
bytes = "1.0"
tracing = "0.1"
log = "0.4"
base64 = "0.22"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
socket2 = { version = "0.5", features = ["all"] }
crossbeam-channel = "0.5"
sha2 = "0.10"
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.5"

# TLS deps (feature-gated)
openssl = { version = "0.10", optional = true, features = ["v110"] }
rustls = { version = "0.23", optional = true, features = ["ring"] }
rcgen = { version = "0.13", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
async-channel = { version = "2.5", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
