[package]
name = "ccek-store"
version = "0.1.0"
edition = "2021"
description = "CCEK storage layer with TrikeShed Series/Cursor abstractions"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = ["memory"]
memory = []
ipfs = ["dep:ipfs-api-backend-hyper", "dep:hyper", "dep:tokio"]
s3 = ["dep:reqwest", "tokio?/rt-multi-thread"]
couchdb = ["dep:reqwest", "tokio?/rt-multi-thread", "dep:serde_json"]
full = ["memory", "ipfs", "s3", "couchdb"]

[dependencies]
ccek-core = { path = "../core" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

# Optional dependencies
ipfs-api-backend-hyper = { version = "0.6", optional = true }
hyper = { version = "0.14", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt", "sync"], optional = true }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
