[package]
name = "ccek-store"
version = "0.1.0"
edition = "2021"
description = "CCEK storage layer with TrikeShed Series/Cursor abstractions"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = ["memory"]
memory = []
ipfs = ["dep:ipfs-api-backend-hyper", "dep:hyper", "dep:tokio"]
s3 = ["dep:reqwest", "tokio/rt-multi-thread"]
full = ["memory", "ipfs", "s3", "couchdb", "pijul-session"]

# CouchDB emulator (sled-backed, IPFS, tensor, m2m, views, git-sync)
couchdb = [
    "dep:sled",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "dep:axum",
    "dep:tower-http",
    "dep:base64",
    "dep:ndarray",
    "dep:ndarray-linalg",
    "dep:ipfs-api-backend-hyper",
    "dep:notify",
    "dep:git2",
    "dep:regex",
    "dep:log",
    "dep:uuid",
    "dep:chrono",
    "dep:tokio",
    "dep:hyper",
]

# Session management via libpijul
pijul-session = [
    "dep:libpijul",
    "dep:axum",
    "dep:dashmap",
    "dep:uuid",
    "dep:tokio",
]

# Git2 feature for CAS git backend adapter
git2 = ["dep:git2"]

# Ring feature for S3 auth
ring = ["dep:ring"]

[dependencies]
# Always-on
ccek-core = { path = "../core" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
parking_lot = "0.12"

# Optional: CAS backends + CouchDB
ipfs-api-backend-hyper = { version = "0.6", optional = true }
hyper = { version = "0.14", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt", "sync", "time", "macros"], optional = true }
sled = { version = "0.34", optional = true }
utoipa = { version = "4.0", optional = true }
utoipa-swagger-ui = { version = "4.0", optional = true, features = ["axum"] }
axum = { version = "0.6", optional = true }
tower-http = { version = "0.4", features = ["cors", "trace"], optional = true }
base64 = { version = "0.22", optional = true }
ndarray = { version = "0.15", optional = true }
ndarray-linalg = { version = "0.16", optional = true }
notify = { version = "6.1", optional = true }
git2 = { version = "0.19", optional = true }
regex = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
ring = { version = "0.17.14", optional = true }

# Optional: pijul session
libpijul = { path = "../../../../pijul/libpijul", optional = true }
dashmap = { version = "6.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
tempfile = "3.0"
